fixed section journey

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </section>
             <section class="virual_tour">
                 <div class="container">
-                    <h2>Virtual tour</h2>
+                    <h2 class="virtual_tour_title">Virtual tour</h2>
                     <div class="virtual_tour_container">
                         <div class="tour_info">
                             <div class="image_description"></div>
@@ -132,6 +132,47 @@
                     </div>
                 </div>
             </section>
+            <section class="journey">
+                <div class="container">
+                    <div class="journey_title_wrapper">
+                        <h2 class="title_info_journey">Video journey</h2>
+                        <p class="description_journey">Enter and visit one of the most famous museums in the world and enjoy masterpieces such as Mona Lisa or Hammurabi's Code</p>
+                    </div>
+                    <div class="video_poster">
+                        <div class="video_poster_image">
+                            <div class="video_round">
+                                <div class="triangle"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="video_keybord">
+                        
+                    </div>
+
+                </div>
+
+
+
+        <!--     </section>      
+            <section class="art_gallery">
+                <div class="container">
+                    <h2 class="gallery_title">Art Gallery</h2>
+                    <div class="gallery_wrapper">
+                        <div class="gallery_image1"></div>
+                        <div class="gallery_image2"></div>
+                        <div class="gallery_image3"></div>
+                        <div class="gallery_image4"></div>
+                        <div class="gallery_image5"></div>
+                        <div class="gallery_image6"></div>
+                        <div class="gallery_image7"></div>
+                        <div class="gallery_image8"></div>
+                        <div class="gallery_image9"></div>
+                        <div class="gallery_image10"></div>
+                        <div class="gallery_image11"></div>
+                        <div class="gallery_image11"></div>
+                    </div>
+                </div>
+            </section> -->
     </main>
 </body>
 </html>
