--- a/index.html
+++ b/index.html
@@ -139,21 +139,20 @@
                         <p class="description_journey">Enter and visit one of the most famous museums in the world and enjoy masterpieces such as Mona Lisa or Hammurabi's Code</p>
                     </div>
                     <div class="video_poster">
-                        <div class="video_poster_image">
-                            <div class="video_round">
-                                <div class="triangle"></div>
-                            </div>
-                        </div>
+                        <div class="video_round"></div>
+                        <div class="triangle"></div>
                     </div>
                     <div class="video_keybord">
                         
-                    </div>
+                    </div>   
+                </div>
+                    
 
                 </div>
+            </section> 
 
 
-
-        <!--     </section>      
+        <!--          
             <section class="art_gallery">
                 <div class="container">
                     <h2 class="gallery_title">Art Gallery</h2>
