fixed section video

--- a/index.html
+++ b/index.html
@@ -143,7 +143,10 @@
                         <div class="triangle"></div>
                     </div>
                     <div class="video_keybord">
-                        
+                        <div class="little_play"></div>
+                        <div class="red_line"></div>
+                        <div class="poin_line"></div>
+                        <div class="white_play"></div>
                     </div>   
                 </div>
                     
