--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <div class="virtual_tour_container">
                         <div class="tour_info">
                             <div class="image_description"></div>
-                            <p class="tour_title">Royal Palace</p>
+                            <p class="tour_title"><a href="https://www.google.com/maps/@48.8606882,2.3356791,3a,90y,328.36h,87.55t/data=!3m7!1e1!3m5!1sAF1QipMZ9YgnArbwEIbTDANeSQYFu9gNqpW_2Sv8FBvY!2e10!3e12!7i4352!8i1815">Royal Palace</a></p>
                             <div class="line"></div>
                             <p class="tour_description_method">360° Virtual Tour</p>
                             <p class="tour_description_panorama">Google Street Panorama View</p>
@@ -114,7 +114,7 @@
                     </div>
                 </div>
             </section>
-            <section class="explore">
+            <section class="explore" id="explore">
                 <div class="container">
                     <div class="picture_wrapper">
                         <div class="picture_description">
@@ -132,7 +132,7 @@
                     </div>
                 </div>
             </section>
-            <section class="journey">
+            <section class="journey" id="video">
                 <div class="container">
                     <div class="journey_title_wrapper">
                         <h2 class="title_info_journey">Video journey</h2>
