--- a/index.html
+++ b/index.html
@@ -78,35 +78,35 @@
                         </div>
                         <div class="tour_info">
                             <div class="image_description_denon"></div>
-                            <p class="tour_title">Denon Wing</p>
+                            <p class="tour_title"><a href="https://www.google.com/maps/@48.8563254,2.3352706,3a,75y,90t/data=!3m7!1e1!3m5!1sAF1QipNRj_CwP4coDMYdCHj6qHeBeJpI2VxU5BUsOX4F!2e10!3e12!7i11000!8i5500">Denon Wing</a></p>
                             <div class="line"></div>
                             <p class="tour_description_method">360° Virtual Tour</p>
                             <p class="tour_description_panorama">Google Street Panorama View</p>
                         </div>
                         <div class="tour_info">
                             <div class="image_description_colonnade"></div>
-                            <p class="tour_title">Colonnade Perrault</p>
+                            <p class="tour_title"><a href="https://www.google.com/maps/@48.8601723,2.3395439,3a,88.4y,322.04h,84.25t/data=!3m7!1e1!3m5!1sAF1QipNMZGQuEA-pAUvIG_eP_2f3gWTKZEJ6XLVJ-Pgb!2e10!3e12!7i10240!8i5120">Colonnade Perrault</a></p>
                             <div class="line"></div>
                             <p class="tour_description_method">360° Virtual Tour</p>
                             <p class="tour_description_panorama">Google Street Panorama View</p>
                         </div>
                         <div class="tour_info">
                             <div class="image_description_greek"></div>
-                            <p class="tour_title">Greek hall</p>
+                            <p class="tour_title"><a href="https://www.google.com/maps/@48.860183,2.3356156,3a,90y,177.69h,95.61t/data=!3m7!1e1!3m5!1sAF1QipP7uFZnTITRe-7AEVAgHAfqiCL-03gvBHcYWgF3!2e10!3e12!7i5472!8i2736">Greek hall</a></p>
                             <div class="line"></div>
                             <p class="tour_description_method">360° Virtual Tour</p>
                             <p class="tour_description_panorama">Google Street Panorama View</p>
                         </div>
                         <div class="tour_info">
                             <div class="image_description_mona"></div>
-                            <p class="tour_title">Mona Lisa</p>
+                            <p class="tour_title"><a href="https://www.google.com/maps/@48.8598788,2.3355157,3a,82.2y,7.53h,94t/data=!3m7!1e1!3m5!1sAF1QipO1wkUUbyzpPjj-OR0mR5etZJT-xl-40XK8rDQ3!2e10!3e12!7i10240!8i5120">Mona Lisa</a></p>
                             <div class="line"></div>
                             <p class="tour_description_method">360° Virtual Tour</p>
                             <p class="tour_description_panorama">Google Street Panorama View</p>
                         </div>
                         <div class="tour_info">
                             <div class="image_description_night"></div>
-                            <p class="tour_title">Night Palace</p>
+                            <p class="tour_title"><a href="https://www.google.com/maps/@48.8563254,2.3352706,3a,90y,21.26h,79.91t/data=!3m7!1e1!3m5!1sAF1QipPpGAowYatVyk3MMGnZAaQkYm2EUk-Dlca06SS5!2e10!3e12!7i11304!8i5652">Night Palace</a></p>
                             <div class="line"></div>
                             <p class="tour_description_method">360° Virtual Tour</p>
                             <p class="tour_description_panorama">Google Street Panorama View</p>
