finish section art gallery

--- a/index.html
+++ b/index.html
@@ -195,33 +195,35 @@
                         <div class="point"></div>
                         <div class="vector_2"></div>
                     </div>
-                </div>
-                   
-
+                </div>  
                 </div>
             </section> 
-
-
-         
-            <!-- <section class="art_gallery">
+            <section class="art_gallery" id="gallery">
                 <div class="container">
                     <h2 class="gallery_title">Art Gallery</h2>
                     <div class="gallery_wrapper">
-                        <div class="gallery_image1"></div>
-                        <div class="gallery_image2"></div>
-                        <div class="gallery_image3"></div>
-                        <div class="gallery_image4"></div>
-                        <div class="gallery_image5"></div>
-                        <div class="gallery_image6"></div>
-                        <div class="gallery_image7"></div>
-                        <div class="gallery_image8"></div>
-                        <div class="gallery_image9"></div>
-                        <div class="gallery_image10"></div>
-                        <div class="gallery_image11"></div>
-                        <div class="gallery_image11"></div>
+                        <div class="wrapper_group_1">                      
+                            <div class="gallery_image1"></div>
+                            <div class="gallery_image2"></div>
+                            <div class="gallery_image3"></div>
+                            <div class="gallery_image4"></div>
+                        </div>
+                        <div class="wrapper_group_2">
+                            <div class="gallery_image5"></div>
+                            <div class="gallery_image6"></div>
+                            <div class="gallery_image7"></div>
+                            <div class="gallery_image8"></div>
+                        </div>
+                        <div class="wrapper_group_3">
+                            <div class="gallery_image9"></div>
+                            <div class="gallery_image10"></div>
+                            <div class="gallery_image11"></div>
+                            <div class="gallery_image12"></div>
+                        </div>  
                     </div>
+                    <div class="gradient"></div>
                 </div>
-            </section> -->
+            </section>
     </main>
 </body>
 </html>
