start section tickets

--- a/index.html
+++ b/index.html
@@ -224,6 +224,41 @@
                     <div class="gradient"></div>
                 </div>
             </section>
+            <section class="tickets" id="contacts"> 
+                <div class="container">
+                    <h2 class="title_tickets">BUY TICKETS</h2>
+                    <div class="tickets_wrapper">
+                        <div class="tickets_image"></div>
+                        <div class="tickets_description">
+                            <div class="tickets_type">
+                                <p>Ticket Type</p>
+                                <p><input name="name" type="radio" value="Permanent exhibition">Permanent exhibition</p>
+                                <p><input name="name" type="radio" value="Temporary exhibition">Temporary exhibition</p>
+                                <p><input name="name" type="radio" value="Combined Admission">Combined Admission</p>
+                            </div>
+                            <div class="tickets_amount">
+                                <label for="#">Basic 18+</label>
+                                <input type="number" id="tentacles" name="tentacles">
+                                <label for="#">Senior 65+</label>
+                                <input type="number" id="tentacles" name="tentacles">
+                                <p>Total €<span>220</span></p>
+                                <form action="#" target="_blank"><button class="tickets_button">Buy Now</button></form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="panoram_image"></div>
+                <div class="container">
+                    <h2 class="contacks">Contacts</h2>
+                    <div class="contacks_info">
+                        <p class="contacs_tile">Palais Royal Musee du Louvre</p>
+                        <p class="info">address: 75001 Paris, France</p>
+                        <p class="info">phone: +33(0) 1 40 20 50 50</p>
+                        <p class="info">mail: info@louvre.fr</p>
+                    </div>
+                </div>
+                <div class="map"></div>
+            </section>
     </main>
 </body>
 </html>
